[package]
name = "sands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", features = ["dynamic"] }
bevy_prototype_lyon = "0.7"
bevy_ecs_tilemap = "0.9"
rand = "0.8"
splines = { version = "4.1", features = ["glam"] }
