[package]
name = "sands_of_merkhyl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_prototype_lyon = "0.8"
bevy_ecs_tilemap = "0.10"
rand = { version = "0.8", features = ["small_rng"] }
splines = { version = "4.1", features = ["glam"] }

[dependencies.bevy]
version = "0.10"
features = [
	"dds"
]
